[gd_scene load_steps=3 format=3 uid="uid://dttm1gh5eoe5"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_j4y5q"]
[ext_resource type="PackedScene" uid="uid://cxq44ooukv26n" path="res://Menus/Options.tscn" id="2_j0kug"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4y5q")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 50

[node name="MainContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MainContainer/MainContainer"]
layout_mode = 2
text = "Game Title"

[node name="Start" type="Button" parent="MainContainer/MainContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MainContainer/MainContainer"]
layout_mode = 2
text = "Options"

[node name="Tutorial" type="Button" parent="MainContainer/MainContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Quit" type="Button" parent="MainContainer/MainContainer"]
layout_mode = 2
text = "Quit
"

[node name="OptionsContainer" parent="." instance=ExtResource("2_j0kug")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_right = 0.0
offset_top = -109.5
offset_right = 185.0
offset_bottom = 109.5
grow_horizontal = 1
theme_override_constants/margin_left = 50

[connection signal="pressed" from="MainContainer/MainContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainContainer/MainContainer/Options" to="." method="showOptions"]
[connection signal="pressed" from="MainContainer/MainContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="returnButton" from="OptionsContainer" to="." method="hideOptions"]
